--- a/index.html
+++ b/index.html
@@ -1,4 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Aslan codes</title>
+</head>
 
 <body>
   <h1>Aslan codes</h1>
